--- a/pagina/index.html
+++ b/pagina/index.html
@@ -17,7 +17,7 @@
 				<a href="paginas/preguntas.html" class="menu">FAQs</a>	
 			</nav>
 
-			<h1><img src="imagenes/titulo.png" width="500px"></h1>
+			<h1 class="titulo">Desplumado</h1>
 			<img src="imagenes/Imagen1.png" width="200px" class="principal">
 			<h2 class="lema">El juego que te <br>dejará pati-difuso.</h2>
 			<p><br><br></p>
