--- a/paginas/preguntas.html
+++ b/paginas/preguntas.html
@@ -2,10 +2,28 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>Pato</title>
+	<link rel="shortcut icon" href="imagenes/chonk.ico">
+	<link rel="stylesheet" type="text/css" href="../css/estilo.css" />
 </head>
 <body>
+	<div id="texto">
+		<header>
+			<nav>
+				<a href="../index.html" class="menu">Inicio</a>	
+				<a href="campaña.html" class="menu">Campaña</a>	
+				<a href="comentarios.html" class="menu">Comentarios</a>	
+				<a href="preguntas.html" class="menu">FAQs</a>	
+			</nav>
+		</header>
 
+		<main>
+			
+		</main>
+		
+		<footer>
+			
+		</footer>
+	</div>
 </body>
 </html>
