--- a/paginas/comentarios.html
+++ b/paginas/comentarios.html
@@ -18,7 +18,11 @@
 		</header>
 
 		<main>
-			
+			<h1>COMENTARIOS</h1>
+			<form>
+			  <textarea rows="5" cols="50"></textarea><br><br>
+			  <input type="submit" value="Enviar comentario">
+			</form>
 		</main>
 		
 		<footer>
