--- a/paginas/campaña.html
+++ b/paginas/campaña.html
@@ -20,6 +20,27 @@
 			padding-top: 5%;
 			font-family: "Pato", serif;
 		}
+		h2{
+			color: white;
+			text-shadow: 3px  0px 0px black,
+               0px  3px 0px black,
+              -3px  0px 0px black,
+               0px -3px 0px black;
+		}
+		p{
+			color: orange;
+			text-shadow: 1px  0px 0px black,
+               0px  1px 0px black,
+              -1px  0px 0px black,
+               0px -1px 0px black;
+		}
+		main li{
+			color: orange;
+			text-shadow: 1px  0px 0px black,
+               0px  1px 0px black,
+              -1px  0px 0px black,
+               0px -1px 0px black;
+		}
 	</style>
 </head>
 <body>
