--- a/paginas/comentarios.html
+++ b/paginas/comentarios.html
@@ -23,6 +23,17 @@
 			  <textarea rows="5" cols="50"></textarea><br><br>
 			  <input type="submit" value="Enviar comentario">
 			</form>
+
+			<div id="disqus_thread"></div>
+			<script>
+			    (function() { // DON'T EDIT BELOW THIS LINE
+			    var d = document, s = d.createElement('script');
+			    s.src = 'https://https-hugoch05-github-io.disqus.com/embed.js';
+			    s.setAttribute('data-timestamp', +new Date());
+			    (d.head || d.body).appendChild(s);
+			    })();
+			</script>
+			<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 		</main>
 		
 		<footer>
