--- a/paginas/comentarios.html
+++ b/paginas/comentarios.html
@@ -26,6 +26,10 @@
 
 			<div id="disqus_thread"></div>
 			<script>
+				var disqus_config = function () {
+			    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+			    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+			    };
 			    (function() { // DON'T EDIT BELOW THIS LINE
 			    var d = document, s = d.createElement('script');
 			    s.src = 'https://https-hugoch05-github-io.disqus.com/embed.js';
@@ -34,11 +38,13 @@
 			    })();
 			</script>
 			<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
 		</main>
 		
 		<footer>
 			
 		</footer>
+		<script id="dsq-count-scr" src="//https-hugoch05-github-io.disqus.com/count.js" async></script>
 	</div>
 </body>
 </html>
