--- a/paginas/comentarios.html
+++ b/paginas/comentarios.html
@@ -39,6 +39,8 @@
 			</script>
 			<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
+			<a href="http://foo.com/bar.html#disqus_thread">Link</a>
+
 		</main>
 		
 		<footer>
