--- a/paginas/comentarios.html
+++ b/paginas/comentarios.html
@@ -19,6 +19,7 @@
 
 		<main>
 			<h1>COMENTARIOS</h1>
+			<a href="http://foo.com/bar.html#disqus_thread">Link</a>
 			<form>
 			  <textarea rows="5" cols="50"></textarea><br><br>
 			  <input type="submit" value="Enviar comentario">
