--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<br>Quack Studios<br>
 			ATENCIÓN: Esta página simula la campaña de microfinanciación de un videojuego ficticio
 			y no representa un producto real. Práctica de Multimedia, 1º GDDV - Curso 23/24
-			(Móstoles), URJC. La URJC no se hace responsable del contenido expuesto por el autor.
+			(Móstoles), URJC. La URJC no se hace responsable del contenido expuesto por el autor.aaaa
 		</footer>
 	</div>
 </body>
