--- a/paginas/comentarios.html
+++ b/paginas/comentarios.html
@@ -5,6 +5,11 @@
 	<title>Desplumado, el juego que te dejará pati-difuso.</title>
 	<link rel="shortcut icon" href="../imagenes/chonk.ico">
 	<link rel="stylesheet" type="text/css" href="../css/estilo.css" />
+	<style>
+		main{
+			padding-top: 2%;
+		}
+	</style>
 </head>
 <body>
 	<div id="texto">
@@ -18,13 +23,6 @@
 		</header>
 
 		<main>
-			<h1>COMENTARIOS</h1>
-			<a href="http://foo.com/bar.html#disqus_thread">Link</a>
-			<form>
-			  <textarea rows="5" cols="50"></textarea><br><br>
-			  <input type="submit" value="Enviar comentario">
-			</form>
-
 			<div id="disqus_thread"></div>
 			<script>
 				var disqus_config = function () {
@@ -40,43 +38,27 @@
 			</script>
 			<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
-			<a href="http://foo.com/bar.html#disqus_thread">Link</a>
-
 		</main>
 		
 		<footer>
+			<table>
+				<caption>Contáctanos</caption>
+				<thead>
+				<tr>
+				<th>Correo electrónico</th>
+				<th>Twitter</th>
+				<th>Instagram</th>
+				</tr>
+				</thead>
+				<tbody>
+				<tr>
+				<td><a href="">direccion de correo</a></td>
+				<td><a href="">@ de twitter</a></td>
+				<td><a href="">@ de instagram</a></td>
+				</tbody>
+			</table>
 			
 		</footer>
 		<script id="dsq-count-scr" src="//https-hugoch05-github-io.disqus.com/count.js" async></script>
 	</div>
 </body>
-=======
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>Pato</title>
-	<link rel="shortcut icon" href="imagenes/chonk.ico">
-	<link rel="stylesheet" type="text/css" href="../css/estilo.css" />
-</head>
-<body>
-	<div id="texto">
-		<header>
-			<nav>
-				<a href="../index.html" class="menu">Inicio</a>	
-				<a href="campaña.html" class="menu">Campaña</a>	
-				<a href="comentarios.html" class="menu">Comentarios</a>	
-				<a href="preguntas.html" class="menu">FAQs</a>	
-			</nav>
-		</header>
-
-		<main>
-			
-		</main>
-		
-		<footer>
-			
-		</footer>
-	</div>
-</body>
-</html>
