--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 				<div><a href="paginas/comentarios.html" class="menu">Comentarios</a></div>
 				<div><a href="paginas/preguntas.html" class="menu">FAQs</a></div>
 			</nav>
-		</header>
-
-		<main>
 
 			<h1 class="titulo">Desplumado</h1>
 			<div class="container lema_foto">
 				<div><h2 class="lema">El juego que te dejará pati-difuso.</h2></div>
 				<div><img src="imagenes/Imagen1.png" width="500px" class="principal" alt="Imagen principal" title="Imagen principal"></div>
 			</div>
+		</header>
+
+		<main>
 			<article>
 				<p>Desplumado es el nuevo juego de plataformas en 2D en el que el protagonista, el pato Hugo, tiene que superar varios obstáculos y enemigos para poder atender a su familia en un mundo abierto, compuesto por diferentes razas. Estas son los patos, las ranas, las cabras y los zorros. A medida que avanza la historia, aparecen nuevos obstáculos y enemigos, que tendrá que superar Hugo con nuevas mecánicas que introducirá el juego en cada nivel. </p>
 			</article>
@@ -43,50 +43,8 @@
 			<br>Quack Studios<br>
 			ATENCIÓN: Esta página simula la campaña de microfinanciación de un videojuego ficticio
 			y no representa un producto real. Práctica de Multimedia, 1º GDDV - Curso 23/24
-			(Móstoles), URJC. La URJC no se hace responsable del contenido expuesto por el autor.aaaa
+			(Móstoles), URJC. La URJC no se hace responsable del contenido expuesto por el autor.
 		</footer>
 	</div>
 </body>
-=======
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>Pato</title>
-	<link rel="shortcut icon" href="imagenes/chonk.ico">
-	<link rel="stylesheet" type="text/css" href="css/estilo.css" />
-</head>
-<body>
-	<div id="back"></div>
-	<div id="texto">
-		<header>
-			<nav>
-				<a href="index.html" class="menu">Inicio</a>	
-				<a href="paginas/campaña.html" class="menu">Campaña</a>	
-				<a href="paginas/comentarios.html" class="menu">Comentarios</a>	
-				<a href="paginas/preguntas.html" class="menu">FAQs</a>	
-			</nav>
-
-			<h1 class="titulo">Desplumado</h1>
-			<img src="imagenes/Imagen1.png" width="200px" class="principal">
-			<h2 class="lema">El juego que te <br>dejará pati-difuso.</h2>
-			<p><br><br></p>
-		</header>
-
-		<main>
-			<article>
-				<p>Desplumado es el nuevo juego de plataformas en 2D en el que el protagonista, el pato Hugo, tiene que superar varios obstáculos y enemigos para poder atender a su familia en un mundo abierto, compuesto por diferentes razas. Estas son los patos, las ranas, las cabras y los zorros. A medida que avanza la historia, aparecen nuevos obstáculos y enemigos, que tendrá que superar Hugo con nuevas mecánicas que introducirá el juego en cada nivel. </p>
-			</article>
-			<section>
-				<img src="imagenes/logo.png" class="lado" width="20px">
-				<p>&nbsp;&nbsp;nombre del grupo</p>
-			</section>
-		</main>
-		<footer>
-			ATENCIÓN: Esta página simula la campaña de microfinanciación de un videojuego ficticio
-<br>y no representa un producto real. Práctica de Multimedia, 1º GDDV - Curso 23/24
-<br>(Móstoles), URJC. La URJC no se hace responsable del contenido expuesto por el autor.
-		</footer>
-	</div>
-  </body>
 </html>
