--- a/paginas/preguntas.html
+++ b/paginas/preguntas.html
@@ -5,6 +5,11 @@
 	<title>Desplumado, el juego que te dejará pati-difuso.</title>
 	<link rel="shortcut icon" href="../imagenes/chonk.ico">
 	<link rel="stylesheet" type="text/css" href="../css/estilo.css" />
+	<style>
+		main{
+			padding-top: 2%;
+		}
+	</style>
 </head>
 <body>
 	<div id="texto">
@@ -51,33 +56,3 @@
 		</footer>
 	</div>
 </body>
-=======
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>Pato</title>
-	<link rel="shortcut icon" href="imagenes/chonk.ico">
-	<link rel="stylesheet" type="text/css" href="../css/estilo.css" />
-</head>
-<body>
-	<div id="texto">
-		<header>
-			<nav>
-				<a href="../index.html" class="menu">Inicio</a>	
-				<a href="campaña.html" class="menu">Campaña</a>	
-				<a href="comentarios.html" class="menu">Comentarios</a>	
-				<a href="preguntas.html" class="menu">FAQs</a>	
-			</nav>
-		</header>
-
-		<main>
-			
-		</main>
-		
-		<footer>
-			
-		</footer>
-	</div>
-</body>
-</html>
