--- a/paginas/campaña.html
+++ b/paginas/campaña.html
@@ -149,9 +149,9 @@
 				</thead>
 				<tbody>
 				<tr>
-				<td><a href="">direccion de correo</a></td>
-				<td><a href="">@ de twitter</a></td>
-				<td><a href="">@ de instagram</a></td>
+				<td><a href="mailto:quack.studios.2024@gmail.com">quack.studios.2024@gmail.com</a></td>
+				<td><a href="https://twitter.com/QuackS_2024">@QuackS2024</a></td>
+				<td><a href="https://www.instagram.com/quack_studios2024?igsh=MWZlZWkxbjI2cWZsZg==">@quack_studios2024</a></td>
 				</tbody>
 			</table>
 		</footer>
