--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
 	<link rel="shortcut icon" href="imagenes/chonk.ico">
 	<link rel="stylesheet" type="text/css" href="css/estilo.css" />
 	<style>
-		body{
-			background-color: lightblue;
-		}
 		nav{
 			top: 0px;
 		}
@@ -18,7 +15,7 @@
 	<div id="texto">
 		<header>
 			<nav class="container">
-				<div><a href="index.html" class="menu">Inicio</a></div>
+				<div><span>Inicio</span></div>
 				<div><a href="paginas/campaña.html" class="menu">Campaña</a></div>
 				<div><a href="paginas/comentarios.html" class="menu">Comentarios</a></div>
 				<div><a href="paginas/preguntas.html" class="menu">FAQs</a></div>
