--- a/paginas/comentarios.html
+++ b/paginas/comentarios.html
@@ -5,11 +5,6 @@
 	<title>Desplumado, el juego que te dejará pati-difuso.</title>
 	<link rel="shortcut icon" href="../imagenes/chonk.ico">
 	<link rel="stylesheet" type="text/css" href="../css/estilo.css" />
-	<style>
-		main{
-			padding-top: 5%;
-		}
-	</style>
 </head>
 <body>
 	<div id="texto">
@@ -17,7 +12,7 @@
 			<nav class="container">
 				<div><a href="../index.html" class="menu">Inicio</a></div>
 				<div><a href="campaña.html" class="menu">Campaña</a></div>
-				<div><a href="comentarios.html" class="menu">Comentarios</a></div>
+				<div><span>Comentarios</span></div>
 				<div><a href="preguntas.html" class="menu">FAQs</a></div>
 			</nav>
 		</header>
