--- a/paginas/preguntas.html
+++ b/paginas/preguntas.html
@@ -5,11 +5,6 @@
 	<title>Desplumado, el juego que te dejará pati-difuso.</title>
 	<link rel="shortcut icon" href="../imagenes/chonk.ico">
 	<link rel="stylesheet" type="text/css" href="../css/estilo.css" />
-	<style>
-		main{
-			padding-top: 2%;
-		}
-	</style>
 </head>
 <body>
 	<div id="texto">
@@ -18,21 +13,21 @@
 				<div><a href="../index.html" class="menu">Inicio</a></div>
 				<div><a href="campaña.html" class="menu">Campaña</a></div>
 				<div><a href="comentarios.html" class="menu">Comentarios</a></div>
-				<div><a href="preguntas.html" class="menu">FAQs</a></div>
+				<div><span>FAQs</span></div>
 			</nav>
 		</header>
 
 		<main>
-			<h1>PREGUNTAS FRECUENTES</h1>
-			<h2>-¿El juego tendrá modo multijugador?</h2>
+			<h1><span>PREGUNTAS FRECUENTES</span></h1>
+			<h2><span>-¿El juego tendrá modo multijugador?</span></h2>
 			<p>El juego se centrará principalmente en una historia de un solo jugador pero más adelante es posible que se implemente un modo multijugador.</p>
-			<h2>-¿Para qué plataformas estará disponible?</h2>
+			<h2><span>-¿Para qué plataformas estará disponible?</span></h2>
 			<p>El juego estará disponible para PC, pero más adelante se lanzará en plataformas como PS5 y XBOX.</p>
-			<h2>-¿Cuándo se lanzará el juego?</h2>
+			<h2><span>-¿Cuándo se lanzará el juego?</span></h2>
 			<p>No hay una fecha fijada de salida pero se aproxima que el juego saldrá para finales del 2025.</p>
-			<h2>-¿Qué tipo de juego será?</h2>
+			<h2><span>-¿Qué tipo de juego será?</span></h2>
 			<p>Será un juego principalmente modo historia pero con la libertad de poder personalizar al personaje, sus herramientas, prendas…</p>
-			<h2>-¿Cada cuanto se actualizará el juego?</h2>
+			<h2><span>-¿Cada cuanto se actualizará el juego?</span></h2>
 			<p>El juego se actualizará de forma periódica cada semana o dos semanas, dependiendo del contenido de la actualización, pero se pretende tener el juego lo más actualizado posible.</p><br>
 		</main>
 		
