--- a/paginas/campaña.html
+++ b/paginas/campaña.html
@@ -46,10 +46,8 @@
 
 		<main>
 			<article class="texto_centro">
-				<video width="100%" title="Video promocional" controls>
-					<source src="../videos/Video.mp4" type="video/mp4">
-					Your browser does not support the video tag.
-				</video>
+				<iframe width="560px" height="360px" src="https://www.youtube.com/embed/aTLi2uNBClA?si=b_0vASxfQYKUMf4M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				<br>
 				<audio controls>
   					<source src="../musica/musica.wav" title="Musica del juego" type="audio/wav">
 					Your browser does not support the audio element.
