--- a/paginas/comentarios.html
+++ b/paginas/comentarios.html
@@ -41,6 +41,7 @@
 				<thead>
 				<tr>
 				<th>Correo electrónico</th>
+				<th>Youtube</th>
 				<th>Twitter</th>
 				<th>Instagram</th>
 				</tr>
@@ -48,6 +49,7 @@
 				<tbody>
 				<tr>
 				<td><a href="mailto:quack.studios.2024@gmail.com">quack.studios.2024@gmail.com</a></td>
+				<th><a href="https://youtube.com/@quackstudios2024?si=q1hoC-EfMl9Vy6dB">@QuackStudios2024</a></th>
 				<td><a href="https://twitter.com/QuackS_2024">@QuackS2024</a></td>
 				<td><a href="https://www.instagram.com/quack_studios2024?igsh=MWZlZWkxbjI2cWZsZg==">@quack_studios2024</a></td>
 				</tbody>
